--- a/frontend/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/frontend/src/app/components/template/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<mat-toolbar class="header">
+    <span>
+        <a>
+            <img class="logo" src="assets/logo.png" alt="logo">
+        </a>
+    </span>
+</mat-toolbar>
