--- a/frontend/frontend/src/styles.css
+++ b/frontend/frontend/src/styles.css
@@ -2,3 +2,8 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.red {
+    color: rgb((277),94 green,107 blue)
+}
