Creating a nav component

--- a/frontend/frontend/src/app/components/template/footer/footer.component.html
+++ b/frontend/frontend/src/app/components/template/footer/footer.component.html
@@ -1,9 +1,9 @@
-<mat-toolbar>
+<mat-toolbar class="footer">
     <span>
-        desenvolvido  com
-        <i class="material-icons red">
+        Desenvolvido com 
+        <i class="material-icons v-middle" appRed>
             favorite
         </i>
-        por <strong class="red">Samuel</strong>
+        por <strong>Samuel<span class="red">$</span></strong>
     </span>
 </mat-toolbar>
