--- a/frontend/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/frontend/src/app/components/template/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="header mat-elevation-z4">
     <span>
         <a>
-            <img class="logo" src="assets/logo.png" alt="logo">
+            <img class="logo" src="assets/Texto do seu parágrafo (2).png" alt="logo">
         </a>
     </span>
     <span class="title-group">
