--- a/frontend/frontend/src/app/components/template/nav/nav.component.html
+++ b/frontend/frontend/src/app/components/template/nav/nav.component.html
@@ -2,13 +2,13 @@
     <mat-sidenav class="sidenav" mode="side" opened 
         fixedInViewport="true" fixedTopGap="64">
         <mat-nav-list class="nav-list">
-            <a mat-list-item name="/">
+            <a mat-list-item name="/" (click)="navigateToHome()">
                 <i class="material-icons">
                     home
                 </i>
                 Início
             </a>
-            <a mat-list-item routerLink="/products">
+            <a mat-list-item routerLink="/products" (click)="navigateToProducts()">
                 <i class="material-icons">
                     storefront
                 </i>
