--- a/frontend/frontend/src/app/components/product/product-create/product-create.component.html
+++ b/frontend/frontend/src/app/components/product/product-create/product-create.component.html
@@ -1,4 +1,14 @@
-<p>product-create works!</p>
+<mat-card>
+    <mat-card-title>New Product</mat-card-title>
+    <form>
+        <mat-form-field>
+            <input matInput placeholder="Name" [(ngModel)] ="product.name">
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Price (R$)" [(ngModel)] = "product.price">
+        </mat-form-field>
+    </form>
+</mat-card>
 <button mat-raised-button (click)="createProduct()" color="primary">
     Save
 </button>
