Reading the data

--- a/frontend/frontend/src/app/views/product-crud/product-crud.component.html
+++ b/frontend/frontend/src/app/views/product-crud/product-crud.component.html
@@ -1,3 +1,5 @@
 <button mat-raised-button (click)="navigateToProductCreate()">
     novo produto
 </button>
+
+<app-product-read></app-product-read>
