--- a/frontend/frontend/src/app/components/product/product-create/product-create.component.html
+++ b/frontend/frontend/src/app/components/product/product-create/product-create.component.html
@@ -2,10 +2,10 @@
     <mat-card-title>New Product</mat-card-title>
     <form>
         <mat-form-field>
-            <input matInput placeholder="Name" [(ngModel)] ="product.name">
+            <input matInput placeholder="Name" [(ngModel)] ="product.name" name="name">
         </mat-form-field>
         <mat-form-field>
-            <input matInput placeholder="Price (R$)" [(ngModel)] = "product.price">
+            <input matInput placeholder="Price (R$)" [(ngModel)] = "product.price" name="price">
         </mat-form-field>
     </form>
 </mat-card>
