--- a/frontend/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/frontend/src/app/components/product/product-read/product-read.component.html
@@ -14,13 +14,12 @@
   
       <ng-container matColumnDef="price">
         <th mat-header-cell *matHeaderCellDef>Price</th>
-        <td mat-cell *matCellDef="let row">{{row.price}}</td>
+        <td mat-cell *matCellDef="let row">{{row.price | currency}}</td>
       </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
   
-   
   </div>
   
