--- a/frontend/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/frontend/src/app/components/product/product-read/product-read.component.html
@@ -16,6 +16,22 @@
         <th mat-header-cell *matHeaderCellDef>Price</th>
         <td mat-cell *matCellDef="let row">{{row.price | currency}}</td>
       </ng-container>
+
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef>Ações</th>
+        <td mat-cell *matCellDef="let row">
+            <a>
+                <i class="material-icons">
+                    edit
+                </i>
+            </a>
+            <a>
+                <i class="material-icons">
+                    delete
+                </i>
+            </a>
+        </td>
+      </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
