--- a/frontend/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/frontend/src/app/components/product/product-read/product-read.component.html
@@ -20,12 +20,12 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef>Ações</th>
         <td mat-cell *matCellDef="let row">
-            <a>
+            <a class="edit">
                 <i class="material-icons">
                     edit
                 </i>
             </a>
-            <a>
+            <a class="delete">
                 <i class="material-icons">
                     delete
                 </i>
