--- a/frontend/frontend/src/app/components/product/product-read/product-read.component.css
+++ b/frontend/frontend/src/app/components/product/product-read/product-read.component.css
@@ -4,12 +4,15 @@ table {
 
 .edit {
     margin-right: 10px;
+    
 }
 
 .edit > i {
     color: #d9cd26;
+    cursor: pointer;
 }
 
 .delete > i {
     color: #e35e6b;
+    cursor: pointer;
 }
