--- a/frontend/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/frontend/src/app/components/product/product-read/product-read.component.html
@@ -20,11 +20,11 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef>Ações</th>
         <td mat-cell *matCellDef="let row">
-            <a class="edit">
+            <a class="edit" (click)="navigateToUpdate()">
                 <i class="material-icons">
                     edit
                 </i>
-            </a>
+            </a >
             <a class="delete">
                 <i class="material-icons">
                     delete
