--- a/frontend/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/frontend/src/app/components/product/product-read/product-read.component.html
@@ -20,7 +20,7 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef>Ações</th>
         <td mat-cell *matCellDef="let row">
-            <a class="edit" (click)="navigateToUpdate()">
+            <a class="edit"routerLink="/products/update/{{ row.id }}">
                 <i class="material-icons">
                     edit
                 </i>
