--- a/frontend/frontend/src/app/components/product/product-update/product-update.component.html
+++ b/frontend/frontend/src/app/components/product/product-update/product-update.component.html
@@ -2,10 +2,10 @@
     <mat-card-title>Modify Product</mat-card-title>
     <form>
         <mat-form-field>
-            <input matInput placeholder="Name" [(ngModel)] ="product.name" name="name">
+            <input matInput placeholder="Name"  name="name" [(ngModel)] ="product.name">
         </mat-form-field>
         <mat-form-field>
-            <input matInput placeholder="Price (R$)" [(ngModel)] = "product.price" name="price">
+            <input matInput placeholder="Price (R$)"name="price"  [(ngModel)] = "product.price">
         </mat-form-field>
     </form>
 </mat-card>
