--- a/frontend/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/frontend/src/app/components/product/product-read/product-read.component.html
@@ -25,7 +25,7 @@
                     edit
                 </i>
             </a >
-            <a class="delete">
+            <a class="delete" routerLink="/products/delete/{{ row.id }}">
                 <i class="material-icons">
                     delete
                 </i>
