--- a/frontend/frontend/src/app/components/product/product-delete/product-delete.component.html
+++ b/frontend/frontend/src/app/components/product/product-delete/product-delete.component.html
@@ -1,1 +1,18 @@
-<p>product-delete works!</p>
+<mat-card>
+    <mat-card-title>New Product</mat-card-title>
+    <form>
+        <mat-form-field>
+            <input matInput placeholder="Name" [(ngModel)] ="product.name" name="name">
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Price (R$)" [(ngModel)] = "product.price" name="price">
+        </mat-form-field>
+    </form>
+</mat-card>
+<button mat-raised-button (click)="createProduct()" color="primary">
+    Save
+</button>
+
+<button mat-raised-button (click)="cancel()" color="primary">
+    Cancel
+</button>
