--- a/frontend/frontend/src/app/components/product/product-delete/product-delete.component.html
+++ b/frontend/frontend/src/app/components/product/product-delete/product-delete.component.html
@@ -1,16 +1,16 @@
 <mat-card>
-    <mat-card-title>New Product</mat-card-title>
+    <mat-card-title>Confirm delete</mat-card-title>
     <form>
         <mat-form-field>
-            <input matInput placeholder="Name" [(ngModel)] ="product.name" name="name">
+            <input matInput placeholder="Name" [value] ="product.name" name="name">
         </mat-form-field>
         <mat-form-field>
-            <input matInput placeholder="Price (R$)" [(ngModel)] = "product.price" name="price">
+            <input matInput placeholder="Price (R$)" [value] = "product.price" name="price">
         </mat-form-field>
     </form>
 </mat-card>
-<button mat-raised-button (click)="createProduct()" color="primary">
-    Save
+<button mat-raised-button (click)="deleteProduct()" color="warn">
+    Delete
 </button>
 
 <button mat-raised-button (click)="cancel()" color="primary">
