Dealing with flexible components

--- a/frontend/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/frontend/src/app/components/template/header/header.component.html
@@ -5,11 +5,11 @@
         </a>
     </span>
     <span class="title-group">
-        <a>
+        <a> 
             <i class="material-icons">
                 home
             </i>
-            Aplicação CRUD
+            {{ title }}
         </a>
     </span>
 </mat-toolbar>
